Extend readme instructions.